Closed Bug 484256 Opened 17 years ago Closed 16 years ago

[BC]Table with "border-collapse: collapse" & huge border overlaps nearby content

Categories

(Core :: Layout: Tables, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dholbert, Assigned: bernd_mozilla)

Details

(Keywords: testcase)

Attachments

(3 files, 2 obsolete files)

Attached file testcase 1 —
STR: Load attached testcase. ACTUAL RESULTS: "Text after table" is placed too high -- it overlaps the table border. EXPECTED RESULTS: "Text after table" should be placed *after* the table border. Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2a1pre) Gecko/20090318 Minefield/3.6a1pre Opera v9.64 shows expected results. I also get expected results if I remove the "border-collapse: collapse" style.
Attached file testcase 2 —
Here's another broken testcase, using border-top & text *above* the table. In this case, we place the table too high up, so its border overlaps the text (and actually extends off the top of the page).
Firefox 3.0.x and 2.0.0.x have the same (broken) behavior on these testcases as mozilla-central. So, not a regression. Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.7) Gecko/2009030422 Ubuntu/8.10 (intrepid) Firefox/3.0.7 Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.18) Gecko/20081029 Firefox/2.0.0.18
Assignee: nobody → bernd_mozilla
Keywords: testcase
this is due to limiting the border width to 255 px, dbaron removed a lot but not all occurrences.
Summary: Table with "border-collapse: collapse" & huge border overlaps nearby content → [BC]Table with "border-collapse: collapse" & huge border overlaps nearby content
Attached patch this fixes the bug (obsolete) — — Splinter Review
but lacks reftests
Attached patch patch (obsolete) — — Splinter Review
Attachment #425942 - Attachment is obsolete: true
Attached patch patch — — Splinter Review
Attachment #426034 - Attachment is obsolete: true
Attachment #426174 - Flags: review?(fantasai.bugs)
Attachment #426174 - Flags: review?(fantasai.bugs) → review+
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: