bug 484256 remove remaining border widths limits that are now obsolete as borders have a 2 byte storage r=fantasai