layout/tables/nsTableFrame.cpp
@@ -5070,12 +5070,6 @@ nsTableFrame::ExpandBCDamageArea(nsRect& aRect) const
   }
 }
 
-#define MAX_TABLE_BORDER_WIDTH 255
-static PRUint8
-LimitBorderWidth(PRUint16 aWidth)
-{
-  return NS_MIN(PRUint16(MAX_TABLE_BORDER_WIDTH), aWidth);
-}
 
 #define ADJACENT    PR_TRUE
 #define HORIZONTAL  PR_TRUE
@@ -5246,8 +5240,7 @@ BCMapCellInfo::SetRowRightContBCBorder()
 void
 BCMapCellInfo::SetTableTopBorderWidth(BCPixelSize aWidth)
 {
-  mTableBCData->mTopBorderWidth =
-     LimitBorderWidth(NS_MAX(mTableBCData->mTopBorderWidth, aWidth));
+  mTableBCData->mTopBorderWidth = NS_MAX(mTableBCData->mTopBorderWidth, aWidth);
 }
 
 void
@@ -5262,8 +5255,8 @@ BCMapCellInfo::SetTableLeftBorderWidth(PRInt32 aRowY, BCPixelSize aWidth)
       mTableBCData->mRightCellBorderWidth = aWidth;
     }
   }
-  mTableBCData->mLeftBorderWidth =
-               LimitBorderWidth(NS_MAX(mTableBCData->mLeftBorderWidth, aWidth));
+  mTableBCData->mLeftBorderWidth = NS_MAX(mTableBCData->mLeftBorderWidth,
+                                          aWidth);
 }
 
 void
@@ -5278,8 +5271,8 @@ BCMapCellInfo::SetTableRightBorderWidth(PRInt32 aRowY, BCPixelSize aWidth)
       mTableBCData->mLeftCellBorderWidth = aWidth;
     }
   }
-  mTableBCData->mRightBorderWidth =
-              LimitBorderWidth(NS_MAX(mTableBCData->mRightBorderWidth, aWidth));
+  mTableBCData->mRightBorderWidth = NS_MAX(mTableBCData->mRightBorderWidth,
+                                           aWidth);
 }
 
 void
@@ -5341,8 +5334,8 @@ BCMapCellInfo::SetLeftBorderWidths(BCPixelSize aWidth)
 void
 BCMapCellInfo::SetTableBottomBorderWidth(BCPixelSize aWidth)
 {
-  mTableBCData->mBottomBorderWidth =
-             LimitBorderWidth(NS_MAX(mTableBCData->mBottomBorderWidth, aWidth));
+  mTableBCData->mBottomBorderWidth = NS_MAX(mTableBCData->mBottomBorderWidth,
+                                            aWidth);
 }
 
 void
